--- a/Implementacion/nbproject/private/private.properties
+++ b/Implementacion/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Fanny\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.sqljdbc42.jar=C:\\Isabela\\Espol\\6 Semestre\\Dise\u00f1o de Software\\ProyectoFinalDS\\Implementacion\\sqljdbc4-2.0.jar
+user.properties.file=C:\\Users\\isabe\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
