--- a/Implementacion/nbproject/private/private.properties
+++ b/Implementacion/nbproject/private/private.properties
@@ -1,7 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.sqljdbc42.jar=C:\\Isabela\\Espol\\6 Semestre\\Dise\u00f1o de Software\\ProyectoFinalDS\\Implementacion\\sqljdbc4-2.0.jar
+file.reference.sqljdbc42.jar=C:\\Users\\Fanny\\Documents\\6SEMESTRE\\Diseno Software\\ProyectoFinal\\ProyectoFinalFinal\\ProyectoFinalDS\\Implementacion\\sqljdbc4-2.0.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\isabe\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Fanny\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
