--- a/Implementacion/nbproject/project.properties
+++ b/Implementacion/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.jar=${dist.dir}/ProyectoFinalDS.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.postgresql-42.2.5.jar=postgresql-42.2.5.jar
 file.reference.sqljdbc42.jar=..\\..\\sqljdbc_6.0\\esn\\jre8\\sqljdbc42.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.postgresql-42.2.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
